bplm/sfdx-src/main/default/objects/Business_Process_Workflow_Action__c/Business_Process_Workflow_Action__c.object-meta.xml
<CustomObject>
    <label>Business Process Workflow Action</label>
    <nameField>
        <label>Business Process Workflow Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Process Workflow Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>