bplm/sfdx-src/main/default/objects/Business_Process_Workflow_Action__c/fields/Action_Handler__c.field-meta.xml
<CustomField>
    <fullName>Action_Handler__c</fullName>
    <label>Action Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>