bplm/sfdx-src/main/default/objects/Business_Process_Workflow_Action__c/fields/Action_Payload__c.field-meta.xml
<CustomField>
    <fullName>Action_Payload__c</fullName>
    <label>Action Payload</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>