bplm/sfdx-src/main/default/objects/Business_Process_Workflow_Action__c/fields/Action_Summary__c.field-meta.xml
<CustomField>
    <fullName>Action_Summary__c</fullName>
    <label>Action Summary</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>