bplm/sfdx-src/main/default/objects/Business_Process_Workflow_Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Process_Workflow_Action_Type</valueSetName>
    </valueSet>
</CustomField>