bplm/sfdx-src/main/default/objects/Business_Process_Workflow_Action__c/fields/Business_Process_Workflow_Rule__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Workflow_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Process Workflow Rule</label>
    <referenceTo>Business_Process_Workflow_Rule__c</referenceTo>
    <relationshipLabel>Business Process Workflow Actions</relationshipLabel>
    <relationshipName>Business_Process_Workflow_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>